--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IDs-Uk-AvX" userLabel="memeView">
-                                <rect key="frame" x="0.0" y="241" width="414" height="414"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="414"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ees-Il-eEo">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
@@ -86,9 +86,9 @@
                             <constraint firstItem="IDs-Uk-AvX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="251" id="PUa-f8-Lw8"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="top" relation="greaterThanOrEqual" secondItem="IDs-Uk-AvX" secondAttribute="bottom" constant="1" id="TaG-F7-4M0"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zd7-Tc-plv"/>
+                            <constraint firstItem="IDs-Uk-AvX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="h9I-gg-pMc"/>
                             <constraint firstItem="IDs-Uk-AvX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ltN-J0-caE"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vVu-fq-iO7"/>
-                            <constraint firstItem="IDs-Uk-AvX" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zkJ-fo-S3u"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Meme Editor" id="hgt-cY-Uu4">
