--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IDs-Uk-AvX" userLabel="memeView">
-                                <rect key="frame" x="0.0" y="88" width="414" height="414"/>
+                                <rect key="frame" x="0.0" y="243" width="414" height="414"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ees-Il-eEo">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
@@ -82,11 +82,11 @@
                         <constraints>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="6PQ-x4-lQG"/>
                             <constraint firstItem="IDs-Uk-AvX" firstAttribute="width" relation="lessThanOrEqual" secondItem="6Tk-OE-BBY" secondAttribute="width" id="7q0-tK-gR9"/>
+                            <constraint firstItem="IDs-Uk-AvX" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="-25" id="N54-Oe-Bl7"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="O1f-gu-t69"/>
                             <constraint firstItem="IDs-Uk-AvX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" priority="251" id="PUa-f8-Lw8"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="top" relation="greaterThanOrEqual" secondItem="IDs-Uk-AvX" secondAttribute="bottom" constant="1" id="TaG-F7-4M0"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zd7-Tc-plv"/>
-                            <constraint firstItem="IDs-Uk-AvX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="h9I-gg-pMc"/>
                             <constraint firstItem="IDs-Uk-AvX" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ltN-J0-caE"/>
                             <constraint firstItem="t1G-w8-Z9h" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="vVu-fq-iO7"/>
                         </constraints>
