--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Meme Editor-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="memeViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MemeViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
