--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -124,7 +124,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1138" y="-303"/>
+            <point key="canvasLocation" x="1754" y="-303"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="X2S-yv-tdL">
@@ -152,10 +152,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u4D-RK-06h">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" indicatorStyle="black" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="u4D-RK-06h">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" red="0.13923252217010307" green="0.13923252217010307" blue="0.13923252217010307" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Woe-TN-bRg">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Woe-TN-bRg">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -209,11 +209,43 @@
                     </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="u4D-RK-06h" id="JbB-4g-stj"/>
+                        <outlet property="flowLayout" destination="Woe-TN-bRg" id="o4X-wV-30e"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Dy-ER-44L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-215.94202898550725" y="341.51785714285711"/>
+        </scene>
+        <!--Meme Detail View Controller-->
+        <scene sceneID="t1N-Gc-G6f">
+            <objects>
+                <viewController id="ou1-CO-8Yd" customClass="MemeDetailViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4j1-hg-hiW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nDk-by-fvB">
+                                <rect key="frame" x="0.0" y="241" width="414" height="414"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="nDk-by-fvB" secondAttribute="height" multiplier="1:1" id="qtk-dl-kRk"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fUq-qW-Ysi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="centerX" secondItem="4j1-hg-hiW" secondAttribute="centerX" id="Blc-kh-dSS"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="leading" secondItem="fUq-qW-Ysi" secondAttribute="leading" id="cfV-BT-jBP"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="centerY" secondItem="4j1-hg-hiW" secondAttribute="centerY" id="zXL-SS-xs6"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="memeImageView" destination="nDk-by-fvB" id="X67-Lu-vFR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1iD-lW-XDN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1161" y="342"/>
         </scene>
         <!--Meme Table View-->
         <scene sceneID="DIC-Fz-o5j">
@@ -346,7 +378,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="bkl-h7-h4H"/>
+        <segue reference="5Jt-6S-spv"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="app.fill" catalog="system" width="128" height="114"/>
