--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--Meme Editor-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="MemeViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MemeViewController" id="BYZ-38-t0r" customClass="MemeViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -124,7 +124,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1754" y="-303"/>
+            <point key="canvasLocation" x="2571" y="-16"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="X2S-yv-tdL">
@@ -210,16 +210,17 @@
                     <connections>
                         <outlet property="collectionView" destination="u4D-RK-06h" id="JbB-4g-stj"/>
                         <outlet property="flowLayout" destination="Woe-TN-bRg" id="o4X-wV-30e"/>
+                        <segue destination="ou1-CO-8Yd" kind="show" id="v5E-yv-pvX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2Dy-ER-44L" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-215.94202898550725" y="341.51785714285711"/>
+            <point key="canvasLocation" x="-217" y="408"/>
         </scene>
         <!--Meme Detail View Controller-->
         <scene sceneID="t1N-Gc-G6f">
             <objects>
-                <viewController id="ou1-CO-8Yd" customClass="MemeDetailViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MemeDetailViewController" id="ou1-CO-8Yd" customClass="MemeDetailViewController" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="4j1-hg-hiW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -227,25 +228,35 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="nDk-by-fvB">
                                 <rect key="frame" x="0.0" y="241" width="414" height="414"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="nDk-by-fvB" secondAttribute="height" multiplier="1:1" id="qtk-dl-kRk"/>
+                                    <constraint firstAttribute="width" secondItem="nDk-by-fvB" secondAttribute="height" multiplier="1:1" id="lqi-N5-eHS"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="fUq-qW-Ysi"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.13725490870000001" green="0.1411764771" blue="0.13725490870000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="nDk-by-fvB" firstAttribute="centerX" secondItem="4j1-hg-hiW" secondAttribute="centerX" id="Blc-kh-dSS"/>
-                            <constraint firstItem="nDk-by-fvB" firstAttribute="leading" secondItem="fUq-qW-Ysi" secondAttribute="leading" id="cfV-BT-jBP"/>
-                            <constraint firstItem="nDk-by-fvB" firstAttribute="centerY" secondItem="4j1-hg-hiW" secondAttribute="centerY" id="zXL-SS-xs6"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="width" secondItem="fUq-qW-Ysi" secondAttribute="width" priority="750" id="UfZ-89-vWO"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="height" secondItem="fUq-qW-Ysi" secondAttribute="height" priority="750" id="W4Y-4U-ehg"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="centerY" secondItem="4j1-hg-hiW" secondAttribute="centerY" id="Z2q-pE-Euz"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="width" relation="lessThanOrEqual" secondItem="fUq-qW-Ysi" secondAttribute="width" id="flz-xJ-Uhf"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="height" relation="lessThanOrEqual" secondItem="fUq-qW-Ysi" secondAttribute="height" id="gJQ-6i-rQu"/>
+                            <constraint firstItem="nDk-by-fvB" firstAttribute="centerX" secondItem="4j1-hg-hiW" secondAttribute="centerX" id="h7Y-NJ-2WB"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="frv-m3-nMt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="9St-Qp-Xg8">
+                            <connections>
+                                <action selector="editButtonDidTapped" destination="ou1-CO-8Yd" id="GM5-fs-9Dn"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="memeImageView" destination="nDk-by-fvB" id="X67-Lu-vFR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1iD-lW-XDN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1161" y="342"/>
+            <point key="canvasLocation" x="712" y="408"/>
         </scene>
         <!--Meme Table View-->
         <scene sceneID="DIC-Fz-o5j">
@@ -255,7 +266,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="esQ-kJ-V7D">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="esQ-kJ-V7D">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" red="0.13725490870000001" green="0.1411764771" blue="0.13725490870000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -328,11 +339,12 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="esQ-kJ-V7D" id="zae-F0-gpS"/>
+                        <segue destination="ou1-CO-8Yd" kind="show" id="OVh-oZ-513"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fQo-Ya-aiU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-215.94202898550725" y="-303.34821428571428"/>
+            <point key="canvasLocation" x="-216" y="-321"/>
         </scene>
         <!--List-->
         <scene sceneID="sfA-Ie-fdr">
@@ -353,7 +365,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LnE-dt-zNV" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1126.0869565217392" y="-303.34821428571428"/>
+            <point key="canvasLocation" x="-1126" y="-321"/>
         </scene>
         <!--Grid-->
         <scene sceneID="6Ce-kA-M1h">
@@ -374,10 +386,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vfe-L8-4f7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1126.0869565217392" y="341.51785714285711"/>
+            <point key="canvasLocation" x="-1126" y="408"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="v5E-yv-pvX"/>
         <segue reference="5Jt-6S-spv"/>
     </inferredMetricsTieBreakers>
     <resources>
