--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -279,19 +279,19 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0fo-PY-MQ0" userLabel="Meme Image View">
-                                                    <rect key="frame" x="0.0" y="1" width="100" height="97.5"/>
+                                                    <rect key="frame" x="20" y="1" width="100" height="97.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="0fo-PY-MQ0" secondAttribute="height" multiplier="1:1" id="4ba-ce-WMi"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcN-dY-y3c">
-                                                    <rect key="frame" x="120" y="19" width="81" height="22"/>
+                                                    <rect key="frame" x="140" y="19" width="81" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bottom Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKg-9a-W4U">
-                                                    <rect key="frame" x="120" y="59" width="112" height="22"/>
+                                                    <rect key="frame" x="140" y="59" width="112" height="22"/>
                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -300,7 +300,7 @@
                                             <constraints>
                                                 <constraint firstItem="xcN-dY-y3c" firstAttribute="leading" secondItem="0fo-PY-MQ0" secondAttribute="trailing" constant="20" id="343-BA-TIG"/>
                                                 <constraint firstItem="0fo-PY-MQ0" firstAttribute="height" secondItem="Q3Z-tT-UYd" secondAttribute="height" id="8s7-to-9pk"/>
-                                                <constraint firstItem="0fo-PY-MQ0" firstAttribute="leading" secondItem="Q3Z-tT-UYd" secondAttribute="leading" id="LVe-4B-Djc"/>
+                                                <constraint firstItem="0fo-PY-MQ0" firstAttribute="leading" secondItem="Q3Z-tT-UYd" secondAttribute="leading" constant="20" id="LVe-4B-Djc"/>
                                                 <constraint firstItem="gKg-9a-W4U" firstAttribute="leading" secondItem="0fo-PY-MQ0" secondAttribute="trailing" constant="20" id="SAT-Ex-Ee8"/>
                                                 <constraint firstItem="0fo-PY-MQ0" firstAttribute="centerY" secondItem="Q3Z-tT-UYd" secondAttribute="centerY" id="Yq1-am-sZH"/>
                                                 <constraint firstItem="xcN-dY-y3c" firstAttribute="centerY" secondItem="0fo-PY-MQ0" secondAttribute="centerY" constant="-20" id="xoU-sv-7rU"/>
@@ -390,8 +390,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="v5E-yv-pvX"/>
-        <segue reference="5Jt-6S-spv"/>
+        <segue reference="OVh-oZ-513"/>
+        <segue reference="bkl-h7-h4H"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="app.fill" catalog="system" width="128" height="114"/>
