--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -266,10 +266,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="esQ-kJ-V7D">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="100" estimatedRowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="esQ-kJ-V7D">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" red="0.13725490870000001" green="0.1411764771" blue="0.13725490870000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="separatorColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="separatorInset" minX="30" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="memeTableCell" rowHeight="100" id="R0r-UM-H8C" customClass="MemeTableCell" customModule="MemeMe1_0___Udacity_Nanodegree_Project_iOS_Developer" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="414" height="100"/>
@@ -279,32 +280,32 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="app.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="0fo-PY-MQ0" userLabel="Meme Image View">
-                                                    <rect key="frame" x="20" y="1" width="100" height="97.5"/>
+                                                    <rect key="frame" x="30" y="11" width="80" height="77.5"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="0fo-PY-MQ0" secondAttribute="height" multiplier="1:1" id="4ba-ce-WMi"/>
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Top Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xcN-dY-y3c">
-                                                    <rect key="frame" x="140" y="19" width="81" height="22"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                    <rect key="frame" x="125" y="24" width="80" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bottom Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKg-9a-W4U">
-                                                    <rect key="frame" x="140" y="59" width="112" height="22"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                                    <rect key="frame" x="125" y="50" width="110" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="xcN-dY-y3c" firstAttribute="leading" secondItem="0fo-PY-MQ0" secondAttribute="trailing" constant="20" id="343-BA-TIG"/>
-                                                <constraint firstItem="0fo-PY-MQ0" firstAttribute="height" secondItem="Q3Z-tT-UYd" secondAttribute="height" id="8s7-to-9pk"/>
-                                                <constraint firstItem="0fo-PY-MQ0" firstAttribute="leading" secondItem="Q3Z-tT-UYd" secondAttribute="leading" constant="20" id="LVe-4B-Djc"/>
-                                                <constraint firstItem="gKg-9a-W4U" firstAttribute="leading" secondItem="0fo-PY-MQ0" secondAttribute="trailing" constant="20" id="SAT-Ex-Ee8"/>
+                                                <constraint firstItem="xcN-dY-y3c" firstAttribute="leading" secondItem="0fo-PY-MQ0" secondAttribute="trailing" constant="15" id="343-BA-TIG"/>
+                                                <constraint firstItem="0fo-PY-MQ0" firstAttribute="height" secondItem="Q3Z-tT-UYd" secondAttribute="height" constant="-20" id="8s7-to-9pk"/>
+                                                <constraint firstItem="gKg-9a-W4U" firstAttribute="top" secondItem="xcN-dY-y3c" secondAttribute="bottom" constant="4" id="DUh-TG-Ulx"/>
+                                                <constraint firstItem="0fo-PY-MQ0" firstAttribute="leading" secondItem="Q3Z-tT-UYd" secondAttribute="leading" constant="30" id="LVe-4B-Djc"/>
                                                 <constraint firstItem="0fo-PY-MQ0" firstAttribute="centerY" secondItem="Q3Z-tT-UYd" secondAttribute="centerY" id="Yq1-am-sZH"/>
-                                                <constraint firstItem="xcN-dY-y3c" firstAttribute="centerY" secondItem="0fo-PY-MQ0" secondAttribute="centerY" constant="-20" id="xoU-sv-7rU"/>
-                                                <constraint firstItem="gKg-9a-W4U" firstAttribute="centerY" secondItem="0fo-PY-MQ0" secondAttribute="centerY" constant="20" id="yNx-85-QKp"/>
+                                                <constraint firstItem="gKg-9a-W4U" firstAttribute="leading" secondItem="xcN-dY-y3c" secondAttribute="leading" id="ZgP-yf-oel"/>
+                                                <constraint firstItem="xcN-dY-y3c" firstAttribute="centerY" secondItem="0fo-PY-MQ0" secondAttribute="centerY" constant="-15" id="xoU-sv-7rU"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.13725490870000001" green="0.1411764771" blue="0.13725490870000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
