--- a/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
+++ b/MemeMe1.0 - Udacity-Nanodegree-Project-iOS-Developer/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ees-Il-eEo">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="414"/>
                                     </imageView>
-                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="oTf-xI-mhF" userLabel="Top Text Field">
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" adjustsFontForContentSizeCategory="YES" minimumFontSize="16" translatesAutoresizingMaskIntoConstraints="NO" id="oTf-xI-mhF" userLabel="Top Text Field">
                                         <rect key="frame" x="10" y="10" width="394" height="69.5"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="50"/>
                                         <textInputTraits key="textInputTraits"/>
@@ -391,8 +391,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="OVh-oZ-513"/>
-        <segue reference="bkl-h7-h4H"/>
+        <segue reference="v5E-yv-pvX"/>
+        <segue reference="5Jt-6S-spv"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="app.fill" catalog="system" width="128" height="114"/>
